--- a/style.css
+++ b/style.css
@@ -88,7 +88,6 @@
     flex-direction: row;
 }
 .frase {
-    /* background-color: aqua; */
     max-width: 900px;
     padding: 25px;
 }
@@ -194,4 +193,150 @@
 }
 .formulario .formulario1 input {
     height: 50px;
+    margin-bottom: 20px;
+
+}
+.formulario1 .btn-enviar {
+    background-color: #FFF;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    width: 100px;
+    border-radius: 50px;
+    margin-top: 15px;
+    border: 1.8px solid #000;
+    cursor: pointer;
+}
+.formulario1 .btn-enviar:hover {
+    background-color: #000;
+    color: #FFF;
+}
+.data {
+    width: 150px;
+}
+
+/* INICIO SECTION5 */
+.section5 {
+    height: 600px;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.section5 h2 {
+        font-family: "Anton SC", sans-serif;
+        font-size: 50px;
+        text-align: center;
+        width: 1000px;
+        color: #FFF;
+        font-weight: 200;
+    }
+.section5 p {
+    font-size: 25px;
+    font-weight: bold;
+    color: #FFF;
+}
+
+/* INICIO FOOTER */
+footer{
+    padding-top: 100px;
+    padding-bottom: 50px;
+    background-color: #FFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+footer .titf {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+footer h3 {
+     font-family: "Anton SC", sans-serif;
+     font-size: 40px;
+     padding-bottom: 25px;
+}
+footer p {
+    font-size: 20px;
+}
+footer a {
+    color: #0004ff;
+    text-decoration: none;
+}
+
+/* RESPONSIVIDADE */
+@media (max-width: 1020px) {
+    * {
+        padding: 0;
+        margin: 0;
+    }
+
+    /* MAIN */
+    .main h1 {
+        font-size: 40px;
+        margin: 30px;
+    }
+
+    /* SECTION 1 */
+    .section1{
+        display: flex;
+        flex-direction: column;
+    }
+    .section1 h2 {
+        display: flex;
+        align-items: center;
+        padding: 20px;
+        font-size: 32px;
+    }
+     .texto {
+        max-width: 100%;
+        margin: 35px;
+    }
+    .section1 .texto p{
+        display: flex;
+    }
+
+    /* SECTION 2 */
+    .section2 img {
+        max-width: 350px;
+    }
+
+    /* SECTION 3 */
+    .section3 p {
+        max-width: 340px;
+    }
+    
+    /* SECTION 4 */
+    .section4 {
+        display: flex;
+        flex-direction: column;
+    }
+    .agendamento{
+        max-width: 100%;
+        padding: 0px;
+    }
+    .agendamento h1 {
+        font-size: 40px;
+    }
+    .section4 .formulario1 {
+        width: 350px;
+        padding-left:0;
+        padding: 30px;
+        display: flex;
+        justify-content: start;
+    }
+    
+    /* SECTION 5 */
+    .section5 h2 {
+        font-size: 30px;
+        width: 400px;
+    }
+    .section5 p {
+        font-size: 18px;
+    }
+
+
 }
