--- a/style.css
+++ b/style.css
@@ -273,6 +273,10 @@ footer a {
         padding: 0;
         margin: 0;
     }
+    /* HEADER */
+    .nav-list {
+        display: none;
+    }
 
     /* MAIN */
     .main h1 {
@@ -337,6 +341,5 @@ footer a {
     .section5 p {
         font-size: 18px;
     }
-
 
 }
